# Mirror

./: .env.example  .gitignore  README.md  Start-Mirror.bat  package-lock.json  package.json  pyproject.toml
backend/: README.md  requirements.txt
backend/app/: __init__.py  main.py
data/decks/general-meeting/: General Meeting.json
docs/: BURNDOWN.md  DECISIONS.md  HPC_RUNBOOK.md  PROJECT_STATUS.md  README.md  SLIDE_NARRATION_PROMPT.md  TTS_STYLE_BERT_VITS2.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: ConversationPanel.tsx  SettingsPanel.tsx  SlideStage.tsx  StackChanAvatar.css  StackChanAvatar.tsx
frontend/src/lib/: api.ts  browserSpeech.ts
scripts/: check-public-release.ps1  dev-api.mjs  dev-api.ps1  hpc-start.sh  hpc-status.sh  hpc-stop.sh  setup-style-bert-vits2.ps1  setup.ps1  start-api.cmd  start-style-bert-vits2.cmd  start-style-bert-vits2.ps1  start-web.cmd  wait-style-bert-vits2.ps1
tests/: test_backend_smoke.py
