[project]
name = "mirror-api"
version = "0.1.0"
description = "FastAPI service for the Mirror project."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "pydantic==2.10.4",
  "pytest==8.3.4",
  "faster-whisper==1.1.1",
  "requests==2.32.5",
  "websockets==16.0",
  "pypdf==6.4.1",
  "PyMuPDF==1.24.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.3,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
